# chatlas

./: .gitignore  .nojekyll  CHANGELOG.html  CHANGELOG.llms.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  example_eval.py  get-started.html  index.html  index.llms.md  llms.txt  objects.txt  prompt-design.html  prompt-engineering.html  pyproject.toml  rag.html  robots.txt  ruff.toml  scale.html  scale.llms.md  search.json  sitemap.xml  structured-data.html  tool-calling.html  web-apps.html  why-chatlas.html  why-chatlas.llms.md
.github/: docs-publish.yml  py-release.yml
chatlas/: __init__.py  _abc.py  _anthropic.py  _anthropic_types.py  _api_headers.py  _auto.py  _batch_chat.py  _batch_job.py  _chat.py  _content.py  _content_expand.py  _content_image.py  _content_pdf.py  _databricks.py  _deepseek.py  _display.py  _github.py  _google.py  _groq.py  _inspect.py  _interpolate.py  _langchain.py  _live_render.py  _logging.py  _mcp_manager.py  _merge.py  _ollama.py  _ollama_types.py  _openai.py  _openai_types.py  _otel.py  _parallel.py  _perplexity.py  _progress.py  _provider.py  _provider_anthropic.py  _provider_cloudflare.py  _provider_databricks.py  _provider_deepseek.py  _provider_github.py  (+29 more)
dev/: vcr-tests.html
docs/: .gitignore  _quarto.yml  _sidebar.yml  get-started.qmd  include-in-header.html  index.py  index.qmd  prompt-design.qmd  prompt-engineering.qmd  scale.qmd  structured-data.qmd  styles.scss  tool-calling.qmd  vocabulary.qmd  web-apps.qmd  why-chatlas.qmd
get-started/: async.html  async.llms.md  chat.html  chat.llms.md  chatbots.html  chatbots.llms.md  debug.html  debug.llms.md  models.html  models.llms.md  monitor.html  monitor.llms.md  parameters.html  parameters.llms.md  stream.html  stream.llms.md  structured-data.html  structured-data.llms.md  system-prompt.html  system-prompt.llms.md  tools.html  tools.llms.md
misc/: RAG.html  RAG.llms.md  evals.html  evals.llms.md  examples.html  examples.llms.md  mcp-tools.html  mcp-tools.llms.md  vocabulary.html  vocabulary.llms.md
reference/: AssistantTurn.html  AssistantTurn.llms.md  Chat.html  Chat.llms.md  ChatAnthropic.html  ChatAnthropic.llms.md  ChatAuto.html  ChatAuto.llms.md  ChatAzureOpenAI.html  ChatAzureOpenAI.llms.md  (+137 more)
(+384 files in other folders)
